# cost-of-landscaping

./: .env.example  .gitignore  README.md  components.json  ecosystem.config.cjs  nuxt.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  supacontrol.toml  tailwind.config.js  vitest.config.ts  ystemctl status docker.service
.vercel/: project.json
app/: app.vue  error.vue
app/layouts/: dev.vue  (+5 more)
docs/: DISCOVERY-REPORT.md  HARD-RULES.md  ai-writing-team-upgrade-prd.md  reka-ui-wrapper-pattern.md
public/: llms.txt
python-worker/: README.md  pyproject.toml
python-worker/poc/: test_stealth_crawl.py
python-worker/scripts/: install.sh  oneshot_crawl.py  shutdown.sh  smoke_test_supabase.py  startup.sh
python-worker/src/: __init__.py  crawler.py  health.py  job_processor.py  main.py
python-worker/src/crawler_worker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python-worker/systemd/: crawler-worker.service
python-worker/tests/: __init__.py  conftest.py  test_crawler.py  test_health.py  test_job_processor.py
scripts/: backfill-stuck-enrichments.ts  fetch-all-contractors.mjs  import-zip-codes.ts  run-migrations-ec2.sh  scrape-contractors.ts  split-json.ts
seeds/: activate-all-contractors.mjs  apply-seed.mjs  charlotte-extended-listicle.mjs  count-contractors.mjs  demote-real-charlotte-tier.mjs  fix-lc-charlotte-position.mjs  generate-listicle-content.mjs  glow-up-lc-listicles.mjs  insert-real-charlotte-companies.mjs  promote-real-charlotte-back.mjs  rerank-mooresville.mjs  seed-nc-brands.sql  short-listicle-content.mjs  strip-listicle-content.mjs
(+813 files in other folders)
