[project]
name = "crawler-worker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "seleniumbase>=4.30.0",
    "playwright>=1.40.0",
    "supabase>=2.10.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
